--- a/PUBLIC/chat.css
+++ b/PUBLIC/chat.css
@@ -68,7 +68,7 @@ text-align: center;
     justify-content: space-between; /* distribuye los botones */
     align-items: center;
     padding: 10px 20px; /* espacio interior */
-    background-color: #ccc;
+    background-color:rgb(197, 190, 181);
 }
 .footer button {
     width: 100px;
@@ -76,7 +76,7 @@ text-align: center;
     border: none;
     outline: none;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
-    border-radius: 20%;
+    border-radius: 10px;
     padding: 10px;
     background-color: white;
     cursor: pointer;
@@ -84,7 +84,9 @@ text-align: center;
 
 
   .footer button:hover{
-    background-color: aliceblue;
-    transition: 0.2s;
+    background-color: rgb(134, 117, 92); /* Color visible */
+  transition: 0.2s;
+
+   
 
   }
