--- a/public/chat.css
+++ b/public/chat.css
@@ -14,8 +14,8 @@ body{
 
 }
 .container{
-width: 450px;
-height: 80vh;
+width: 900px;
+height: 90vh;
 display: flex;
 flex-direction: column;
 box-shadow: 2px 2px 20px rgba(0,0,0,4);
@@ -85,9 +85,9 @@ text-align: center;
 
 .footer {
     display: flex;
-    justify-content: space-between; /* distribuye los botones */
+    justify-content: space-between; 
     align-items: center;
-    padding: 10px 20px; /* espacio interior */
+    padding: 10px 150px; 
     background-color: #BEE3F6;
     border-radius: 3rem;
 }
@@ -98,13 +98,23 @@ text-align: center;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
     border-radius: 10px;
     padding: 10px;
-    background-color: white;
+    background: linear-gradient(to right,#9ed6f2, #e5e8eb);
     cursor: pointer;
   }
 
+  .footer button.eliminar {
+    background: linear-gradient(to right,red, #ebebeb);
+    transition: background 0.3s ease;
+  }
+  
+  .footer button.eliminar:hover {
+    background: linear-gradient(to right,red, #ff0000);
+  }
+  
+
 
   .footer button:hover{
-    background-color: #84cff4; /* Color visible */
+    background: linear-gradient(to right,#2cb9ff, #ffffff);
   transition: 0.2s;
 
   }
@@ -132,7 +142,7 @@ text-align: center;
     display: none;
     position: absolute;
     right: 0;
-    background-color: #ffffff;
+    background: linear-gradient(to right,#9ed6f2, #e5e8eb);
     min-width: 140px;
     box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
     border-radius: 10px;
@@ -140,7 +150,7 @@ text-align: center;
   }
   
   .dropdown-content button {
-    color: #266693;
+    color: black;
     padding: 10px;
     width: 100%;
     border: none;
@@ -151,7 +161,9 @@ text-align: center;
   }
   
   .dropdown-content button:hover {
-    background-color: #b3e2f9;
+    background: linear-gradient(to right,#2cb9ff, #ffffff);
+    transition: 0.2s;
+    border-radius: 10px;
   }
   
   .dropdown:hover .dropdown-content {
